# sovereignshield

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  app.py  generate_qr.py  pyproject.toml
.github/workflows/: ci.yml
Artifacts/project/sovereignshield/: .dockerignore  Dockerfile  HF_DEPLOY.md  README.md  __init__.py  app.py  models.py  requirements.txt
Artifacts/project/sovereignshield/agents/: planner.py  reviewer.py
Artifacts/project/sovereignshield/assets/: QR_Mobile_Tiny_Sized.b64.txt
Artifacts/project/sovereignshield/core/: audit_db.py  charts.py  opa_eval.py  tf_parser.py
Artifacts/project/sovereignshield/rag/: retriever.py
Artifacts/project/sovereignshield/scripts/: audit_runs_schema.sql
Artifacts/project/sovereignshield/tests/: __init__.py  test_opa_eval.py  test_placeholder.py  test_sovereignshield.py  test_sprint4.py
tests/: test_sprint4.py
