[project]
name = "sovereignshield"
version = "0.1.0"
description = "SovereignShield — Shiny for Python sovereign cloud compliance app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shiny>=0.7.1",
    "anthropic>=0.39.0",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["Artifacts/project/sovereignshield/tests"]
python_files = ["test_*.py"]
